# mouse-project

./: .gitignore  LICENSE  README.md
mouse/: .gitignore  Cargo.toml  README.md  custom_mouse.cfg  memory.x
mouse-cli/: .gitignore  Cargo.toml  README.md  test.y4m
mouse-cli/src/: commands.rs  keys.rs  main.rs  mouse.rs
mouse/.cargo/: config.toml
mouse/max32625-adc/: Cargo.toml
mouse/max32625-adc/src/: adc.rs  lib.rs
mouse/max32625-gpio/: Cargo.toml
mouse/max32625-gpio/src/: gpio.rs  lib.rs  pin.rs
mouse/max32625-ioman/: Cargo.toml
mouse/max32625-ioman/src/: lib.rs
mouse/max32625-rs/: Cargo.toml  device.x  max32625.svd
mouse/max32625-rs/src/: adc.rs  aes.rs  clkman.rs  crc.rs  flc.rs  generic.rs  gpio.rs  i2cm0.rs  i2cs.rs  icc.rs  ioman.rs  lib.rs  maa.rs  owm.rs  pmu0.rs  pt0.rs  ptg.rs  pwrman.rs  pwrseq.rs  rtccfg.rs  rtctmr.rs  spim0.rs  spis.rs  spix.rs  tmr0.rs  tpu.rs  tpu_tsr.rs  uart0.rs  usb.rs  wdt0.rs
mouse/max32625-rs/src/adc/: afe_ctrl.rs  ctrl.rs  data.rs  intr.rs  limit0.rs  limit1.rs  limit2.rs  limit3.rs  ro_cal0.rs  ro_cal1.rs  ro_cal2.rs  status.rs
mouse/max32625-rs/src/aes/: ctrl.rs  erase_all.rs
mouse/max32625-rs/src/clkman/: clk_config.rs  clk_ctrl.rs  clk_gate_ctrl0.rs  clk_gate_ctrl1.rs  clk_gate_ctrl2.rs  cm4_start_clk_en0.rs  cm4_start_clk_en1.rs  cm4_start_clk_en2.rs  crypt_clk_ctrl_0_aes.rs  crypt_clk_ctrl_1_maa.rs  crypt_clk_ctrl_2_prng.rs  i2c_timer_ctrl.rs  inten.rs  intfl.rs  sys_clk_ctrl_0_cm4.rs  sys_clk_ctrl_10_i2cs.rs  sys_clk_ctrl_11_spi0.rs  sys_clk_ctrl_12_spi1.rs  sys_clk_ctrl_13_spi2.rs  sys_clk_ctrl_14_spib.rs  sys_clk_ctrl_15_owm.rs  sys_clk_ctrl_16_spis.rs  sys_clk_ctrl_1_sync.rs  sys_clk_ctrl_2_spix.rs  sys_clk_ctrl_3_prng.rs  sys_clk_ctrl_4_wdt0.rs  sys_clk_ctrl_5_wdt1.rs  sys_clk_ctrl_6_gpio.rs  sys_clk_ctrl_7_pt.rs  sys_clk_ctrl_8_uart.rs  sys_clk_ctrl_9_i2cm.rs  trim_calc.rs
mouse/max32625-rs/src/crc/: reseed.rs  seed16.rs  seed32.rs
mouse/max32625-rs/src/flc/: bl_ctrl.rs  bypass.rs  ctrl.rs  ctrl2.rs  disable_we0.rs  disable_we1.rs  disable_we2.rs  disable_we3.rs  disable_we4.rs  disable_we5.rs  disable_we6.rs  disable_we7.rs  disable_xr0.rs  disable_xr1.rs  disable_xr2.rs  disable_xr3.rs  disable_xr4.rs  disable_xr5.rs  disable_xr6.rs  disable_xr7.rs  faddr.rs  fckdiv.rs  fdata.rs  inten1.rs  intfl1.rs  intr.rs  pdm33.rs  perform.rs  security.rs  slm.rs  status.rs  tacc.rs  tprog.rs  twk_cycl_cnt.rs  user_option.rs
mouse/max32625-rs/src/gpio/: free_p0.rs  free_p1.rs  free_p2.rs  free_p3.rs  free_p4.rs  free_p5.rs  free_p6.rs  free_p7.rs  free_p8.rs  func_sel_p0.rs  (+80 more)
mouse/max32625-spi/: Cargo.toml
mouse/max32625-spi/src/: lib.rs  spim.rs  trans.rs
mouse/max32625-timer-basic/: Cargo.toml
mouse/max32625-timer-basic/src/: lib.rs  timer.rs
mouse/max32625-usb/: Cargo.toml
mouse/max32625-usb/src/: endpoint.rs  lib.rs  usb.rs  usb_bus.rs
mouse/src/: flash.rs  main.rs  mouse.rs  mouse_report.rs  sensor_driver.rs  static_borrow.rs  usb.rs
(+278 files in other folders)
