[package]
name = "mouse-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
hidapi = "1.4.1"
mouse-commands = { path = "../mouse-commands" }
pmw3389-driver = { path = "../pmw3389-driver" }