[package]
name = "mouse-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
mouse-commands = { path = "../mouse-commands" }
pixels = "0.9.0"
pmw3389-driver = { path = "../pmw3389-driver" }
serialport = "4.2.0"
winit = "0.26.0"
winit_input_helper = "0.12.0"
y4m = "0.7.0"
