[package]
name = "max32625"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.5", features = ["inline-asm"] }
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.1"

[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]
