[package]
name = "max32625-spi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.5", features = ["inline-asm"] }
max32625 = { path = "../max32625-rs" }
max32625-gpio = { path = "../max32625-gpio" }
max32625-timer-basic = { path = "../max32625-timer-basic" }